Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/AIS/AISInteractiveContext.h

extern "C" DECL_EXPORT int AIS_InteractiveContext_SelectionColor(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SelectionColor48F4F471(
	void* instance,
	int aCol);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDisplayMode989C8794(
	void* instance,
	int AMode,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDeviationCoefficientADEC6198(
	void* instance,
	void* aniobj,
	double aCoefficient,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDeviationAngleADEC6198(
	void* instance,
	void* aniobj,
	double anAngle,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetAngleAndDeviationADEC6198(
	void* instance,
	void* aniobj,
	double anAngle,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHLRDeviationCoefficientADEC6198(
	void* instance,
	void* aniobj,
	double aCoefficient,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHLRDeviationAngleADEC6198(
	void* instance,
	void* aniobj,
	double anAngle,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHLRAngleAndDeviationADEC6198(
	void* instance,
	void* aniobj,
	double anAngle,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDeviationCoefficientD82819F3(
	void* instance,
	double aCoefficient);
extern "C" DECL_EXPORT double AIS_InteractiveContext_DeviationCoefficient(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetDeviationAngleD82819F3(
	void* instance,
	double anAngle);
extern "C" DECL_EXPORT double AIS_InteractiveContext_DeviationAngle(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHLRDeviationCoefficientD82819F3(
	void* instance,
	double aCoefficient);
extern "C" DECL_EXPORT double AIS_InteractiveContext_HLRDeviationCoefficient(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetHLRAngleAndDeviationD82819F3(
	void* instance,
	double anAngle);
extern "C" DECL_EXPORT void AIS_InteractiveContext_EnableDrawHiddenLine(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DisableDrawHiddenLine(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetIsoNumber818B71C9(
	void* instance,
	int NbIsos,
	int WhichIsos);
extern "C" DECL_EXPORT int AIS_InteractiveContext_IsoNumber4113B908(
	void* instance,
	int WhichIsos);
extern "C" DECL_EXPORT void AIS_InteractiveContext_IsoOnPlane461FC46A(
	void* instance,
	bool SwitchOn);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsoOnPlane(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetSelectedAspectBD651AAF(
	void* instance,
	void* anAspect,
	bool globalChange,
	bool updateViewer);
extern "C" DECL_EXPORT int AIS_InteractiveContext_MoveTo556D776C(
	void* instance,
	int XPix,
	int YPix,
	void* aView);
extern "C" DECL_EXPORT int AIS_InteractiveContext_HilightNextDetected36A6FAB7(
	void* instance,
	void* aView);
extern "C" DECL_EXPORT int AIS_InteractiveContext_HilightPreviousDetected36A6FAB7(
	void* instance,
	void* aView);
extern "C" DECL_EXPORT int AIS_InteractiveContext_Select92079733(
	void* instance,
	int XPMin,
	int YPMin,
	int XPMax,
	int YPMax,
	void* aView,
	bool updateviewer);
extern "C" DECL_EXPORT int AIS_InteractiveContext_Select461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT int AIS_InteractiveContext_ShiftSelect461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT int AIS_InteractiveContext_ShiftSelect92079733(
	void* instance,
	int XPMin,
	int YPMin,
	int XPMax,
	int YPMax,
	void* aView,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetCurrentObject7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_AddOrRemoveCurrentObject7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UpdateCurrent(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetOkCurrent(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsCurrent5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_InitCurrent(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_NextCurrent(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_HilightCurrents461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnhilightCurrents461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ClearCurrents461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetSelected7BDA0103(
	void* instance,
	void* aniObj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetSelectedCurrent(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UpdateSelected461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_AddOrRemoveSelected7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_HilightSelected461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UnhilightSelected461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ClearSelected461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_AddOrRemoveSelected5E7DD5C8(
	void* instance,
	void* aShape,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_AddOrRemoveSelected26C4ECD2(
	void* instance,
	void* anOwner,
	bool updateviewer);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_IsSelected5DD8A2CA(
	void* instance,
	void* aniobj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_InitSelected(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_NextSelected(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_InitDetected(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_NextDetected(void* instance);
extern "C" DECL_EXPORT int AIS_InteractiveContext_OpenLocalContextA58FCEEB(
	void* instance,
	bool UseDisplayedObjects,
	bool AllowShapeDecomposition,
	bool AcceptEraseOfObjects,
	bool BothViewers);
extern "C" DECL_EXPORT void AIS_InteractiveContext_CloseLocalContext898DAFFC(
	void* instance,
	int Index,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_CloseAllContexts461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ResetOriginalState461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ClearLocalContext4E21E443(
	void* instance,
	int TheMode);
extern "C" DECL_EXPORT void AIS_InteractiveContext_UseDisplayedObjects(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_NotUseDisplayedObjects(void* instance);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_ImmediateAdd4F47E777(
	void* instance,
	void* anIObj,
	int aMode);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_ImmediateRemove4F47E777(
	void* instance,
	void* anIObj,
	int aMode);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_EndImmediateDraw3F19241F(
	void* instance,
	void* aView,
	bool DoubleBuf);
extern "C" DECL_EXPORT bool AIS_InteractiveContext_EndImmediateDraw461FC46A(
	void* instance,
	bool DoubleBuf);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Drag5E8F49C8(
	void* instance,
	void* aView,
	void* anObject,
	void* aTranformation,
	bool postConcatenate,
	bool update,
	bool zBuffer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Activate4F47E777(
	void* instance,
	void* anIobj,
	int aMode);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Deactivate5DD8A2CA(
	void* instance,
	void* anIObj);
extern "C" DECL_EXPORT void AIS_InteractiveContext_Deactivate4F47E777(
	void* instance,
	void* anIobj,
	int aMode);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetShapeDecomposition7BDA0103(
	void* instance,
	void* anIobj,
	bool aStatus);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SetTemporaryAttributesA5FB0AF4(
	void* instance,
	void* anObj,
	void* aDrawer,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SubIntensityOn7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SubIntensityOff7BDA0103(
	void* instance,
	void* aniobj,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SubIntensityOn461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_SubIntensityOff461FC46A(
	void* instance,
	bool updateviewer);
extern "C" DECL_EXPORT void AIS_InteractiveContext_AddFilter3C9475B7(
	void* instance,
	void* aFilter);
extern "C" DECL_EXPORT void AIS_InteractiveContext_RemoveFilter3C9475B7(
	void* instance,
	void* aFilter);
extern "C" DECL_EXPORT void AIS_InteractiveContext_RemoveFilters(void* instance);
extern "C" DECL_EXPORT void AIS_InteractiveContext_ActivateStandardModeC6FD32C4(
	void* instance,
	int aStandardActivation);
extern "C" DECL_EXPORT void AIS_InteractiveContext_DeactivateStandardModeC6FD32C4(
	void* instance,
	int aStandardActivation);