Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/AIS/AISInteractiveContext.cs

		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_SelectionColor(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SelectionColor48F4F471(IntPtr instance, int aCol);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDisplayMode989C8794(IntPtr instance, int AMode,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDeviationCoefficientADEC6198(IntPtr instance, IntPtr aniobj,double aCoefficient,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDeviationAngleADEC6198(IntPtr instance, IntPtr aniobj,double anAngle,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetAngleAndDeviationADEC6198(IntPtr instance, IntPtr aniobj,double anAngle,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHLRDeviationCoefficientADEC6198(IntPtr instance, IntPtr aniobj,double aCoefficient,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHLRDeviationAngleADEC6198(IntPtr instance, IntPtr aniobj,double anAngle,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHLRAngleAndDeviationADEC6198(IntPtr instance, IntPtr aniobj,double anAngle,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDeviationCoefficientD82819F3(IntPtr instance, double aCoefficient);
		[DllImport("NaroOccCore.dll")]
		private static extern double AIS_InteractiveContext_DeviationCoefficient(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetDeviationAngleD82819F3(IntPtr instance, double anAngle);
		[DllImport("NaroOccCore.dll")]
		private static extern double AIS_InteractiveContext_DeviationAngle(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHLRDeviationCoefficientD82819F3(IntPtr instance, double aCoefficient);
		[DllImport("NaroOccCore.dll")]
		private static extern double AIS_InteractiveContext_HLRDeviationCoefficient(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetHLRAngleAndDeviationD82819F3(IntPtr instance, double anAngle);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_EnableDrawHiddenLine(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DisableDrawHiddenLine(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetIsoNumber818B71C9(IntPtr instance, int NbIsos,int WhichIsos);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_IsoNumber4113B908(IntPtr instance, int WhichIsos);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_IsoOnPlane461FC46A(IntPtr instance, bool SwitchOn);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsoOnPlane(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetSelectedAspectBD651AAF(IntPtr instance, IntPtr anAspect,bool globalChange,bool updateViewer);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_MoveTo556D776C(IntPtr instance, int XPix,int YPix,IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_HilightNextDetected36A6FAB7(IntPtr instance, IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_HilightPreviousDetected36A6FAB7(IntPtr instance, IntPtr aView);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_Select92079733(IntPtr instance, int XPMin,int YPMin,int XPMax,int YPMax,IntPtr aView,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_Select461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_ShiftSelect461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_ShiftSelect92079733(IntPtr instance, int XPMin,int YPMin,int XPMax,int YPMax,IntPtr aView,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetCurrentObject7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_AddOrRemoveCurrentObject7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UpdateCurrent(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetOkCurrent(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsCurrent5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_InitCurrent(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_NextCurrent(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_HilightCurrents461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnhilightCurrents461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ClearCurrents461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetSelected7BDA0103(IntPtr instance, IntPtr aniObj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetSelectedCurrent(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UpdateSelected461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_AddOrRemoveSelected7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_HilightSelected461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UnhilightSelected461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ClearSelected461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_AddOrRemoveSelected5E7DD5C8(IntPtr instance, IntPtr aShape,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_AddOrRemoveSelected26C4ECD2(IntPtr instance, IntPtr anOwner,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_IsSelected5DD8A2CA(IntPtr instance, IntPtr aniobj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_InitSelected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_NextSelected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_InitDetected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_NextDetected(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int AIS_InteractiveContext_OpenLocalContextA58FCEEB(IntPtr instance, bool UseDisplayedObjects,bool AllowShapeDecomposition,bool AcceptEraseOfObjects,bool BothViewers);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_CloseLocalContext898DAFFC(IntPtr instance, int Index,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_CloseAllContexts461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ResetOriginalState461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ClearLocalContext4E21E443(IntPtr instance, int TheMode);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_UseDisplayedObjects(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_NotUseDisplayedObjects(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_ImmediateAdd4F47E777(IntPtr instance, IntPtr anIObj,int aMode);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_ImmediateRemove4F47E777(IntPtr instance, IntPtr anIObj,int aMode);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_EndImmediateDraw3F19241F(IntPtr instance, IntPtr aView,bool DoubleBuf);
		[DllImport("NaroOccCore.dll")]
		private static extern bool AIS_InteractiveContext_EndImmediateDraw461FC46A(IntPtr instance, bool DoubleBuf);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Drag5E8F49C8(IntPtr instance, IntPtr aView,IntPtr anObject,IntPtr aTranformation,bool postConcatenate,bool update,bool zBuffer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Activate4F47E777(IntPtr instance, IntPtr anIobj,int aMode);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Deactivate5DD8A2CA(IntPtr instance, IntPtr anIObj);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_Deactivate4F47E777(IntPtr instance, IntPtr anIobj,int aMode);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetShapeDecomposition7BDA0103(IntPtr instance, IntPtr anIobj,bool aStatus);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SetTemporaryAttributesA5FB0AF4(IntPtr instance, IntPtr anObj,IntPtr aDrawer,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SubIntensityOn7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SubIntensityOff7BDA0103(IntPtr instance, IntPtr aniobj,bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SubIntensityOn461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_SubIntensityOff461FC46A(IntPtr instance, bool updateviewer);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_AddFilter3C9475B7(IntPtr instance, IntPtr aFilter);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_RemoveFilter3C9475B7(IntPtr instance, IntPtr aFilter);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_RemoveFilters(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_ActivateStandardModeC6FD32C4(IntPtr instance, int aStandardActivation);
		[DllImport("NaroOccCore.dll")]
		private static extern void AIS_InteractiveContext_DeactivateStandardModeC6FD32C4(IntPtr instance, int aStandardActivation);
